--- a/debugging/Js/Validación Formulario/validacion_err.html
+++ b/debugging/Js/Validación Formulario/validacion_err.html
@@ -8,10 +8,10 @@
 <body>
     <form onsubmit="return validarFormulario()">
         <label for="nombre">Nombre:</label>
-        <input id="nombre" type="text">
+        <input id="nombre" type="text" placeholder="Nombre >= 3 carácteres.">
         <br><br>
         <label for="email">Email:</label>
-        <input id="email" type="email">
+        <input id="email" placeholder="formato: a@a.a">
         <br><br>
         <button type="submit">Enviar</button>
     </form>
